src/vs/workbench/contrib/chat/browser/widget/media/chat.css
/* ... */
.interactive-item-container .chat-resource-widget,
.interactive-item-container .chat-agent-widget .monaco-button {
	border-radius: 4px;
	padding: 1px 3px;
}

.interactive-item-container .chat-agent-command {
	background-color: var(--vscode-chat-slashCommandBackground);
	color: var(--vscode-chat-slashCommandForeground);
	display: inline-flex;
	align-items: center;
	margin-right: 0.5ch;
	border-radius: 4px;
	padding: 0 0 0 3px;
}

.interactive-item-container .chat-agent-command > .monaco-button {
	display: flex;
	align-self: stretch;
	align-items: center;
	cursor: pointer;
	padding: 0 2px;
	margin-left: 2px;
	border-top-right-radius: 4px;
	border-bottom-right-radius: 4px;
}

.interactive-item-container .chat-agent-command > .monaco-button:hover {
	background: var(--vscode-toolbar-hoverBackground);
}

.interactive-item-container .chat-agent-widget .monaco-text-button {
	display: inline;
	border: none;
}

.interactive-session .checkpoint-file-changes-summary {
	display: flex;
	flex-direction: column;
	flex-wrap: wrap;
	align-items: center;
	border-radius: 4px;
	border: 1px solid var(--vscode-chat-requestBorder);

	.chat-view-changes-icon {
		padding: 3px;
		float: right;
		cursor: pointer;
	}

	.chat-view-changes-icon:hover {
		border-radius: 5px;
		background-color: var(--vscode-toolbar-hoverBackground);
	}

	.insertions-and-deletions {
		display: flex;
		margin-right: 5px;
		font-size: 12px;
	}

	.checkpoint-file-changes-summary-header {
		padding: 3px 3px 3px 3px;
		width: 100%;
		display: flex;
		box-sizing: border-box;
		justify-content: space-between;
	}

	.checkpoint-file-changes-summary-header .monaco-button-mdlabel {
		display: flex;
		width: 100%;
		text-align: left;
		align-items: center;
	}

	.checkpoint-file-changes-summary-header .chat-file-changes-label {
		width: 100%;
		float: left;
	}

	.checkpoint-file-changes-summary-header .chat-file-changes-label .monaco-button {
		width: 100%;
	}

	.checkpoint-file-changes-summary-header .chat-file-changes-label .monaco-button .codicon {
		font-size: 16px;
	}

	.chat-summary-list {
		width: 100%;
		max-width: 100%;
		padding: 0px;
		margin-bottom: 0px;
		border-bottom: 0px;
		border-left: 0px;
		border-right: 0px;
		box-sizing: border-box;
		border-radius: 0px;
	}

	.chat-summary-list .monaco-icon-label {
		display: flex;
	}

	.chat-summary-list .monaco-scrollable-element {
		border-radius: 4px;
	}

	.insertions {
		color: var(--vscode-chat-linesAddedForeground);
		font-weight: bold;
		padding-left: 5px;
		padding-right: 5px;
	}

	.deletions {
		color: var(--vscode-chat-linesRemovedForeground);
		font-weight: bold;
	}
}

.interactive-session .checkpoint-file-changes-summary.chat-file-changes-collapsed .chat-summary-list,
.interactive-session .chat-used-context.chat-used-context-collapsed .chat-used-context-list {
	display: none;
}

.interactive-session .chat-used-context {
	display: flex;
	flex-direction: column;
	gap: 2px;
}

.interactive-response-progress-tree,
.chat-notification-widget,
.chat-summary-list,
.chat-used-context-list,
.chat-quota-error-widget,
.chat-rate-limited-widget {
	border: 1px solid var(--vscode-chat-requestBorder);
	border-radius: 4px;
	margin-bottom: 8px;
}

.interactive-response-progress-tree,
.interactive-session .chat-summary-list,
.interactive-session .chat-used-context-list {
	padding: 4px 3px;

	.monaco-icon-label {
		padding: 0px 3px;
	}
}

.interactive-session .chat-editing-session-list {

	.monaco-icon-label {
		padding: 0px 3px;
	}

	.monaco-icon-label.excluded {
		color: var(--vscode-notificationsWarningIcon-foreground)
	}
}

.interactive-session .chat-editing-session-list.collapsed {
	display: none;
}

.interactive-session .chat-summary-list .monaco-list .monaco-list-row {
	border-radius: 4px;
}

.interactive-session .chat-summary-list .monaco-list .monaco-list-row:hover {
	background-color: var(--vscode-list-hoverBackground) !important;
}

.interactive-session .chat-used-context-list .monaco-list .monaco-list-row {
	border-radius: 2px;
}

.interactive-session .chat-file-changes-label {
	color: var(--vscode-interactive-session-foreground);
	user-select: none;
}

.interactive-session .chat-used-context-label {
	font-size: var(--vscode-chat-font-size-body-s);
	font-family: var(--vscode-chat-font-family, inherit);
	color: var(--vscode-descriptionForeground);
	user-select: none;

	code {
		font-size: var(--vscode-chat-font-size-body-xs);
	}
}

.interactive-session .chat-file-changes-label:hover,
.interactive-session .chat-used-context-label:hover {
	opacity: unset;
}

.interactive-session .chat-file-changes-label .monaco-button,
.interactive-session .chat-used-context-label .monaco-button {
	width: fit-content;
	border: none;
	border-radius: 4px;
	gap: 4px;
	text-align: initial;
	justify-content: initial;
}

.interactive-session .chat-used-context-label .monaco-button {
	/* unset Button styles */
	display: inline-flex;
}

.interactive-session .chat-file-changes-label .monaco-button {
	padding: 2px 2px 2px 2px;
}

.interactive-session .chat-used-context-label .monaco-button {
	padding: 2px 6px 2px 2px;
	font-size: var(--vscode-chat-font-size-body-m);
}

.interactive-session .chat-file-changes-label .monaco-button:hover {
	background-color: var(--vscode-toolbar-hoverBackground);
}

.interactive-session .chat-used-context-label .monaco-button:hover {
	background-color: var(--vscode-list-hoverBackground);
	color: var(--vscode-foreground);

}

.interactive-session .chat-file-changes-label .monaco-text-button:focus,
.interactive-session .chat-used-context-label .monaco-text-button:focus {
	outline: none;
}

.interactive-session .chat-file-changes-label .monaco-text-button:focus-visible,
.interactive-session .chat-used-context-label .monaco-text-button:focus-visible {
	outline: 1px solid var(--vscode-focusBorder);
}
/* ... */

